<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransfoActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_transfo"
        android:layout_width="468dp"
        android:layout_height="302dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/roundedCorners"
        app:srcCompat="@drawable/trans" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="426dp"
        android:layout_height="490dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/transfoActivity_designation"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:text="@string/titre"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/transfoActivity_region"
            android:layout_width="310dp"
            android:layout_height="37dp"
            android:text="@string/region"
            android:textColor="@color/green"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/transfoActivity_puissance"
            android:layout_width="313dp"
            android:layout_height="45dp"
            android:textSize="20sp"
            android:text="@string/puissance" />

        <TextView
            android:id="@+id/transfoActivity_description"
            android:layout_width="321dp"
            android:layout_height="190dp"
            android:layout_marginTop="10dp"
            android:text="@string/desc_tr"
            android:textSize="14sp" />

        <Button
            android:id="@+id/transfoActivity_btn"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/voir_sur_maps" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>